# A-real-time-cryptocurrency-trading-analytics-system

./: Cargo.toml  README.md  docker-compose.yml  ingestion_script.py  start_system.bat  start_system.sh
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/api/rsi/: route.ts
frontend/app/api/status/: route.ts
frontend/components/: Error.tsx  Loading.tsx
frontend/types/: index.ts
src/: main.rs
